--- a/src/app/views/layout.njk
+++ b/src/app/views/layout.njk
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    {% include 'includes/styles.njk' %}
     <title>Foodfy</title>
 </head>
 <body>
