--- a/src/app/views/includes/header.njk
+++ b/src/app/views/includes/header.njk
@@ -1,4 +1,4 @@
-<header id="main">
+<header id="main" class="container">
     <img src="images/logo.png" alt="Foodfy" id="logo">
     <nav class="menu">
         <ul>
