--- a/src/app/views/includes/styles.njk
+++ b/src/app/views/includes/styles.njk
@@ -2,3 +2,4 @@
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="styles/base.css">
 <link rel="stylesheet" href="styles/header.css">
+<link rel="stylesheet" href="styles/home.css">
