--- a/src/app/views/layout.njk
+++ b/src/app/views/layout.njk
@@ -7,8 +7,10 @@
     <title>Foodfy</title>
 </head>
 <body>
+    <main>
     {% include 'includes/header.njk' %}
     {% block content %}{% endblock content %}
+    </main>
     {% include 'includes/footer.njk' %}
 </body>
 </html>
