Create featured recipes section with recipes grid

--- a/src/app/views/home/index.njk
+++ b/src/app/views/home/index.njk
@@ -12,4 +12,57 @@
     </div>
     <img src="images/chef.png" alt="Ilustração de Chef de Cozinha">
 </section>
+
+<section id="featured-recipes" class="container">
+    <h1>Mais acessadas</h1>
+    <div class="recipes-grid">
+        <div class="recipe">
+            <img src="images/burger.png" alt="Imagem de Triplo Bacon Burger">
+            <div class="info">
+                <div class="title">Triplo Bacon Burger</div>
+                <div class="author">por Jorge Relato</div>
+            </div>
+        </div>
+        
+        <div class="recipe">
+            <img src="images/burger.png" alt="Imagem de Triplo Bacon Burger">
+            <div class="info">
+                <div class="title">Triplo Bacon Burger</div>
+                <div class="author">por Jorge Relato</div>
+            </div>
+        </div>
+        
+        <div class="recipe">
+            <img src="images/burger.png" alt="Imagem de Triplo Bacon Burger">
+            <div class="info">
+                <div class="title">Triplo Bacon Burger</div>
+                <div class="author">por Jorge Relato</div>
+            </div>
+        </div>
+        
+        <div class="recipe">
+            <img src="images/burger.png" alt="Imagem de Triplo Bacon Burger">
+            <div class="info">
+                <div class="title">Triplo Bacon Burger</div>
+                <div class="author">por Jorge Relato</div>
+            </div>
+        </div>
+        
+        <div class="recipe">
+            <img src="images/burger.png" alt="Imagem de Triplo Bacon Burger">
+            <div class="info">
+                <div class="title">Triplo Bacon Burger</div>
+                <div class="author">por Jorge Relato</div>
+            </div>
+        </div>
+        
+        <div class="recipe">
+            <img src="images/burger.png" alt="Imagem de Triplo Bacon Burger">
+            <div class="info">
+                <div class="title">Triplo Bacon Burger</div>
+                <div class="author">por Jorge Relato</div>
+            </div>
+        </div>
+    </div>
+</section>
 {% endblock content %}
