--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -33,6 +33,13 @@ main {
     margin: 0 auto;
 }
 
+p {
+    line-height: 28px;
+    font-size: 18px;
+    color: var(--text-paragraph);
+    margin-top: 20px;
+}
+
 section {
     width: 100%;
 }
@@ -40,6 +47,13 @@ section {
 section > h1 {
     font-size: 24px;
     margin-top: 50px;
+    margin-bottom: 20px;
+    color: var(--main-text);
+}
+
+section > h2 {
+    font-size: 20px;
+    margin-top: 30px;
     margin-bottom: 20px;
     color: var(--main-text);
 }
