--- a/src/app/views/home/index.njk
+++ b/src/app/views/home/index.njk
@@ -16,53 +16,15 @@
 <section id="featured-recipes" class="container">
     <h1>Mais acessadas</h1>
     <div class="recipes-grid">
+        {% for recipe in recipes %}
         <div class="recipe">
-            <img src="images/burger.png" alt="Imagem de Triplo Bacon Burger">
+            <img src="{{recipe.image}}" alt="Imagem de {{recipe.title}}">
             <div class="info">
-                <div class="title">Triplo Bacon Burger</div>
-                <div class="author">por Jorge Relato</div>
+                <div class="title">{{recipe.title}}</div>
+                <div class="author">por {{recipe.author}}</div>
             </div>
         </div>
-        
-        <div class="recipe">
-            <img src="images/burger.png" alt="Imagem de Triplo Bacon Burger">
-            <div class="info">
-                <div class="title">Triplo Bacon Burger</div>
-                <div class="author">por Jorge Relato</div>
-            </div>
-        </div>
-        
-        <div class="recipe">
-            <img src="images/burger.png" alt="Imagem de Triplo Bacon Burger">
-            <div class="info">
-                <div class="title">Triplo Bacon Burger</div>
-                <div class="author">por Jorge Relato</div>
-            </div>
-        </div>
-        
-        <div class="recipe">
-            <img src="images/burger.png" alt="Imagem de Triplo Bacon Burger">
-            <div class="info">
-                <div class="title">Triplo Bacon Burger</div>
-                <div class="author">por Jorge Relato</div>
-            </div>
-        </div>
-        
-        <div class="recipe">
-            <img src="images/burger.png" alt="Imagem de Triplo Bacon Burger">
-            <div class="info">
-                <div class="title">Triplo Bacon Burger</div>
-                <div class="author">por Jorge Relato</div>
-            </div>
-        </div>
-        
-        <div class="recipe">
-            <img src="images/burger.png" alt="Imagem de Triplo Bacon Burger">
-            <div class="info">
-                <div class="title">Triplo Bacon Burger</div>
-                <div class="author">por Jorge Relato</div>
-            </div>
-        </div>
+        {% endfor %}
     </div>
 </section>
 {% endblock content %}
