--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -72,6 +72,8 @@ section > h2 {
 
 .recipes-grid .recipe img {
     width: 100%;
+    height: 140px;
+    object-fit: cover;
     border-radius: 15px;
 }
 
