--- a/src/app/views/includes/header.njk
+++ b/src/app/views/includes/header.njk
@@ -1,5 +1,5 @@
 <header id="main" class="container">
-    <a href="/"><img src="images/logo.png" alt="Foodfy" id="logo"></a>
+    <a href="/"><img src="/images/logo.png" alt="Foodfy" id="logo"></a>
     <nav class="menu">
         <ul>
             <li class="item">
