Link each recipe to its single page

--- a/src/app/views/home/index.njk
+++ b/src/app/views/home/index.njk
@@ -17,6 +17,7 @@
     <h1>Mais acessadas</h1>
     <div class="recipes-grid">
         {% for recipe in recipes %}
+        <a href="/receitas/{{loop.index0}}">
         <div class="recipe">
             <img src="{{recipe.image}}" alt="Imagem de {{recipe.title}}">
             <div class="info">
@@ -24,6 +25,7 @@
                 <div class="author">por {{recipe.author}}</div>
             </div>
         </div>
+        </a>
         {% endfor %}
     </div>
 </section>
