--- a/src/app/views/layout.njk
+++ b/src/app/views/layout.njk
@@ -12,5 +12,6 @@
     {% block content %}{% endblock content %}
     </main>
     {% include 'includes/footer.njk' %}
+    {% include 'includes/scripts.njk' %}
 </body>
 </html>
