--- a/public/styles/recipes.css
+++ b/public/styles/recipes.css
@@ -23,20 +23,40 @@ section#recipe-show > header .author {
     color: var(--secondary-text);
 }
 
-section#recipe-show #ingredients .ingredient {
+section#recipe-show .ingredients .ingredient {
     list-style: disc inside;
     color: var(--text-paragraph);
     font-size: 18px;
     line-height: 28px;
 }
 
-section#recipe-show #preparation .step {
+section#recipe-show .preparation .step {
     list-style: decimal inside;
     color: var(--text-paragraph);
     font-size: 18px;
     line-height: 28px;
 }
 
-section#recipe-show #preparation .step::marker {
+section#recipe-show .preparation .step::marker {
     font-weight: bold;
+}
+
+section#recipe-show section header {
+    position: relative;
+    display: inline-flex;
+}
+
+section#recipe-show section header > .toggle {
+    text-transform: uppercase;
+    font-size: 12px;
+    font-weight: bold;
+    color: var(--light-gray-text);
+    background: none;
+    border: none;
+    cursor: pointer;
+
+    position: absolute;
+    bottom: 23px;
+    right: 0;
+    transform: translateX(calc(100% + 8px));
 }
