--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -12,6 +12,7 @@
     box-sizing: border-box;
     list-style: none;
     text-decoration: none;
+    outline: none;
     font-family: 'Roboto', sans-serif;
 }
 
@@ -33,6 +34,11 @@ main {
     margin: 0 auto;
 }
 
+.hidden {
+    display: none;
+    visibility: hidden;
+}
+
 p {
     line-height: 28px;
     font-size: 18px;
@@ -44,14 +50,14 @@ section {
     width: 100%;
 }
 
-section > h1 {
+section h1 {
     font-size: 24px;
     margin-top: 50px;
     margin-bottom: 20px;
     color: var(--main-text);
 }
 
-section > h2 {
+section h2 {
     font-size: 20px;
     margin-top: 30px;
     margin-bottom: 20px;
