--- a/src/app/views/includes/styles.njk
+++ b/src/app/views/includes/styles.njk
@@ -1,6 +1,8 @@
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <link rel="stylesheet" href="/styles/base.css">
 <link rel="stylesheet" href="/styles/header.css">
 <link rel="stylesheet" href="/styles/home.css">
 <link rel="stylesheet" href="/styles/recipes.css">
+<link rel="stylesheet" href="/styles/admin.css">
