Move header#main grid to .menu and remove .menu ul margin-left

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,14 +1,17 @@
 header#main {
-    display: grid;
-    grid-template-columns: 94px auto;
-    align-items: center;
     width: 100%;
     height: 32px;
     margin-top: 31px;
 }
 
+header#main .menu {
+    display: grid;
+    grid-template-columns: 94px auto;
+    align-items: center;
+    gap: 120px;
+}
+
 header#main .menu ul {
-    margin-left: 120px;
     display: flex;
 }
 
