--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -46,6 +46,20 @@ p {
     margin-top: 20px;
 }
 
+button {
+    cursor: pointer;
+}
+
+button.primary {
+    background: #6558C3;
+    padding: 9px 20px;
+    font-weight: bold;
+    font-size: 16px;
+    color: white;
+    border-radius: 4px;
+    border: none;
+}
+
 section {
     width: 100%;
 }
