--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -60,6 +60,46 @@ button.primary {
     border: none;
 }
 
+.fields .field {
+    margin-top: 30px;
+}
+
+label {
+    font-weight: bold;
+    color: var(--main-text);
+    font-size: 16px;
+}
+
+input, textarea, select {
+    width: 100%;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    margin-top: 10px;
+    padding: 15px 20px;
+    font-size: 16px;
+    color: var(--main-text);
+}
+
+select {
+    -moz-appearance: none;
+    -webkit-appearance: none;
+    appearance: none;
+
+    background: 
+    url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='24' viewBox='0 0 24 24' width='24'%3E%3Cpath d='M0 0h24v24H0V0z' fill='none'/%3E%3Cpath d='M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z' fill='%23999' /%3E%3C/svg%3E"),
+    white;
+
+    background-repeat: no-repeat;
+
+    background-position: right 20px top 50%, 0 0;
+
+    background-size: 20px, 100%;
+}
+
+select option[disabled] {
+    display: none;
+}
+
 section {
     width: 100%;
 }
@@ -97,13 +137,13 @@ section h2 {
     border-radius: 15px;
 }
 
-.recipes-grid .recipe .title {
+.grid .name {
     font-size: 18px;
     margin-bottom: 5px;
     color: var(--main-text);
 }
 
-.recipes-grid .recipe .author {
+.grid .author {
     font-size: 14px;
     color: var(--secondary-text);
 }
