Add grid class to recipes-grid and convert div.title into div.name

--- a/src/app/views/recipes/index.njk
+++ b/src/app/views/recipes/index.njk
@@ -2,13 +2,13 @@
 
 {% block content %}
 <section id="recipes" class="container">
-    <div class="recipes-grid">
+    <div class="recipes-grid grid">
         {% for recipe in recipes %}
         <a href="/receitas/{{loop.index0}}">
         <div class="recipe">
             <img src="{{recipe.image}}" alt="Imagem de {{recipe.title}}">
             <div class="info">
-                <div class="title">{{recipe.title}}</div>
+                <div class="name">{{recipe.title}}</div>
                 <div class="author">por {{recipe.author}}</div>
             </div>
         </div>
@@ -19,7 +19,7 @@
         <div class="recipe">
             <img src="{{recipe.image}}" alt="Imagem de {{recipe.title}}">
             <div class="info">
-                <div class="title">{{recipe.title}}</div>
+                <div class="name">{{recipe.title}}</div>
                 <div class="author">por {{recipe.author}}</div>
             </div>
         </div>
