Import global scripts and rename admin recipes scripts

--- a/src/app/views/includes/scripts.njk
+++ b/src/app/views/includes/scripts.njk
@@ -1,1 +1,2 @@
-<script src="/scripts/recipes.js"></script>
+<script src="/scripts/global.js"></script>
+<script src="/scripts/admin-recipes.js"></script>
