--- a/src/app/views/admin/includes/header.njk
+++ b/src/app/views/admin/includes/header.njk
@@ -1,9 +1,12 @@
 <header id="main" class="about">
     <nav class="menu container">
-    <a href="/"><img src="/images/logo_white.png" alt="Foodfy" id="logo"></a>
+    <a href="/admin/receitas"><img src="/images/logo_white.png" alt="Foodfy" id="logo"></a>
         <ul>
             <li class="item">
                 <a href="/admin/receitas">Receitas</a>
+            </li>
+            <li class="item">
+                <a href="/admin/chefs">Chefs</a>
             </li>
         </ul>
     </nav>
