Insert div.content inside footer to fix margin-top

--- a/src/app/views/includes/footer.njk
+++ b/src/app/views/includes/footer.njk
@@ -1,1 +1,3 @@
-<footer>Todos direitos reservados, receitas Foodfy.</footer>
+<footer><div class="content">
+Todos direitos reservados, receitas Foodfy.
+</div></footer>
