Import recipes.js

--- a/src/app/views/includes/scripts.njk
+++ b/src/app/views/includes/scripts.njk
@@ -1,2 +1,3 @@
 <script src="/scripts/global.js"></script>
+<script src="/scripts/recipes.js"></script>
 <script src="/scripts/admin-recipes.js"></script>
