Add Chefs and Search field to menu

--- a/src/app/views/includes/header.njk
+++ b/src/app/views/includes/header.njk
@@ -8,6 +8,13 @@
             <li class="item">
                 <a href="/receitas">Receitas</a>
             </li>
+            <li class="item">
+                <a href="/chefs">Chefs</a>
+            </li>
         </ul>
+        <form action="/receitas" method="get">
+            <input type="text" name="search" placeholder="Buscar uma receita">
+            <button type="submit" class="primary">Buscar</button>
+        </form>
     </nav>
 </header>
