--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -118,6 +118,21 @@ section h2 {
     color: var(--main-text);
 }
 
+main > section > header {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    margin-top: 50px;
+}
+
+main > section > header img {
+    border-radius: 15px;
+    margin-bottom: 50px;
+    width: 940px;
+    height: 280px;
+    object-fit: cover;
+}
+
 .recipes-grid {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
@@ -143,9 +158,30 @@ section h2 {
     color: var(--main-text);
 }
 
-.grid .author {
+.grid .info:nth-child(2) {
     font-size: 14px;
     color: var(--secondary-text);
+}
+
+.chefs-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(179px, 1fr));
+    margin-top: 30px;
+    gap: 20px;
+}
+
+.chefs-grid .chef img {
+    border-radius: 50%;
+    width: 64px;
+    height: 64px;
+    object-fit: cover;
+}
+
+.chefs-grid .chef {
+    display: grid;
+    grid-template-columns: 64px auto;
+    gap: 20px;
+    align-items: center;
 }
 
 footer {
