Convert #recipe-show to .recipe-show

--- a/src/app/views/admin/recipes/show.njk
+++ b/src/app/views/admin/recipes/show.njk
@@ -1,7 +1,7 @@
 {% extends 'admin/layout.njk' %}
 
 {% block content %}
-<section id="admin-recipe-show" class="container">
+<section class="container recipe-show">
     <div class="edit">
     <h1>Receita: {{recipe.title}}</h1>
     <a href="/admin/receitas/{{recipe.id}}/editar"><button>Editar receita</button></a>
