Change margin-top of grid button and add different margin-top to .chef button

--- a/public/styles/admin.css
+++ b/public/styles/admin.css
@@ -50,6 +50,10 @@ header#main.about .menu ul a.active {
     border: none;
     font-weight: bold;
     font-size: 14px;
+    margin-top: 10px;
+}
+
+#admin .chef button {
     margin-top: 5px;
 }
 
