--- a/src/app/views/includes/styles.njk
+++ b/src/app/views/includes/styles.njk
@@ -6,3 +6,4 @@
 <link rel="stylesheet" href="/styles/home.css">
 <link rel="stylesheet" href="/styles/recipes.css">
 <link rel="stylesheet" href="/styles/admin.css">
+<link rel="stylesheet" href="/styles/admin-chefs.css">
