Convert #admin-recipe-edit into .admin-recipe

--- a/src/app/views/admin/recipes/edit.njk
+++ b/src/app/views/admin/recipes/edit.njk
@@ -1,7 +1,7 @@
 {% extends 'admin/layout.njk' %}
 
 {% block content %}
-<section id="admin-recipe-edit" class="container">
+<section class="container admin-recipe">
     <form action="/admin/receitas?_method=PUT" method="post" id="edit-recipe" enctype="multipart/form-data">
     <header>
         <h1>Editando receita</h1>
