Convert #admin-recipe-create into .admin-recipe

--- a/src/app/views/admin/recipes/create.njk
+++ b/src/app/views/admin/recipes/create.njk
@@ -1,7 +1,7 @@
 {% extends 'admin/layout.njk' %}
 
 {% block content %}
-<section id="admin-recipe-create" class="container">
+<section class="container admin-recipe">
     {% if chefs.length == 0 %}
     <header>
     <h1>Nenhum chef cadastrado</h1>
