--- a/src/app/views/admin/includes/fields.njk
+++ b/src/app/views/admin/includes/fields.njk
@@ -8,7 +8,12 @@
     
     <div class="field">
     <label for="photos">Imagens da receita</label>
-    <input type="file" name="photos">
+    <div class="photos-upload">
+        <input type="file" name="photos" multiple accept="image/*">
+        <div class="add-photo">
+            <i class="material-icons">add</i>
+        </div>
+    </div>
     </div>
     
     <div class="field">
